# smart-placement-kit

./: .gitignore  README.md  README_MIGRATION.md  middleware.js  next.config.mjs  package-lock.json  package.json  preview.html  proxy.js
actions/: coding.js  cover-letter.js  dashboard.js  file-parser.js  interview.js  mock-interview.js  placement.js  resume.js  user.js
app/: globals.css  layout.js  not-found.jsx  page.js
app/(auth)/: layout.js
app/(auth)/sign-in/[[...sign-in]]/: page.jsx
app/(auth)/sign-up/[[...sign-up]]/: Page.jsx
app/(main)/: layout.js
app/(main)/ai-cover-letter/: page.jsx
app/(main)/ai-cover-letter/[id]/: page.jsx
app/(main)/ai-cover-letter/_components/: CoverLetterGenerator.jsx
app/(main)/coding/: page.jsx
app/(main)/coding/_components/: CodingChallenge.jsx
app/(main)/dashboard/: layout.js  page.jsx
app/(main)/interview/: layout.js  page.jsx
app/(main)/onboarding/: page.jsx
app/(main)/placement-process/: page.jsx
app/(main)/resume/: layout.js  page.jsx
app/api/inngest/: route.js
app/api/livekit/: route.js
app/lib/: schema.js  use-fetch.js
backend/: agent.py  main.py  prompts.py  pyproject.toml  requirements.txt  tools.py
backend-1/: package.json  questions.json  server.js
components/: AttentionTracker.jsx  Header.jsx  HeroSection.jsx  InterviewSession.jsx
data/: faqs.js  stats.js
lib/: checkUser.js  mongodb.js
lib/inngest/: client.js  functions.js
models/: Assessment.js  CodingAssessment.js  CoverLetter.js  IndustryInsight.js  Interview.js  PlacementProcess.js  Resume.js  User.js
(+20 files in other folders)
